--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,15 @@
-header{
+.header{
     text-align: center;
+    color:rgba(236, 127, 255, 0.766);
+    font-size: 25px;
+}
+
+.start button{
+    font-size: large;
+    background-color: aquamarine;
+    color: blueviolet
+}
+
+body{
+    background-color: darkslateblue;
 }
