added new fields to HTML

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@
 }
 
 body {
-    background-image: url(th.jpg);
+    background-image: url(Champagne.webp);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
