--- a/assets/style.css
+++ b/assets/style.css
@@ -24,10 +24,19 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-attachment: cover;
-   
 
 
 }
 h1{
     text-align: left;
+}
+
+.box{
+    background-color: #ffffff78;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    flex: 0 0 400px;
+
 }
