--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,3 @@
-.header {
-    text-align: center;
-    margin-right: 10%;
-    color: rgba(0, 0, 0, 0.737);
-    font-size: 25px;
-   
-    
-
-
-
-}
-
-.start button {
-    font-size: large;
-    background-color: rgb(17, 1, 14);
-    color: rgba(238, 231, 231, 0.766);
-    
-
-}
-
 body {
     background-image: url(Champagne.webp);
     background-repeat: no-repeat;
@@ -26,11 +6,31 @@ body {
     background-attachment: cover;
 
 }
-h1{
+
+header {
+    text-align: center;
+    margin-right: 10%;
+    color: rgba(0, 0, 0, 0.737);
+    font-size: 25px;
+    background-color: #ffffff78;
+    padding: 2%;
+
+    border-radius: 10px;
+}
+
+.start button {
+    font-size: large;
+    background-color: rgba(238, 138, 138, 0.429);
+    color: rgba(190, 25, 25, 0.766);
+   
+
+}
+
+h1 {
     text-align: left;
 }
 
-.box{
+.box {
     background-color: #ffffff78;
     border-style: solid;
     border-width: 1px;
@@ -40,7 +40,7 @@ h1{
 
 }
 
-#map{
+#map {
     height: 50%;
     width: 50%;
 }
