--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,17 @@ header {
     font-size: 5rem;
 }
 
-.start button {
+.previous-results-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.previous-recommendations-link {
+    font-size: 1.75rem;
+}
+
+.submit-button {
     font-size: large;
     background-color: rgba(238, 138, 138, 0.429);
     color: rgba(190, 25, 25, 0.766);
