--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,22 @@ header {
     font-size: 1.75rem;
 }
 
+.previous-recommendations-heading {
+    font-size: 1.75rem;
+}
+
+.previous-recommendations-list {
+    display: flexbox;
+    flex-direction: column;
+}
+
+.previous-recommendations-list li {
+    font-size: 1.5rem;
+    padding: 20px;
+    border-bottom: 2px;
+    border-style: outset;
+}
+
 .submit-button {
     font-size: large;
     background-color: rgba(238, 138, 138, 0.429);
