--- a/assets/style.css
+++ b/assets/style.css
@@ -72,6 +72,13 @@ header {
 
 }
 
+.results-map-container {
+    display: flexbox;
+    justify-content: space-evenly;
+}
+
+
+
 .map-container{
     border-radius: 20%;
     border-style: solid;
