--- a/assets/style.css
+++ b/assets/style.css
@@ -56,6 +56,8 @@ header {
     font-size: large;
     background-color: rgba(238, 138, 138, 0.429);
     color: rgba(190, 25, 25, 0.766);
+    padding: 9px;
+    border-radius: 9px;
 }
 
 .submit-button:active {
